--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "ai-chat-backend",
   "version": "1.0.0",
-  "description": "Institute of AI chat backend",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": "^18 || ^20"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "openai": "^4.27.0",
     "node-fetch": "^3.3.2"
   }
 }
